# MCPSafe

./: .gitignore  AGENTS.md  AUDIT.md  AUDIT_DROID.md  LICENSE  MANIFEST.in  PLAN.md  README.md  action.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
src/mcpsafe/: __init__.py  cli.py  formatters.py  parser.py  rules.py
src/mcpsafe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_action.py  test_cli.py  test_comprehensive.py  test_formatters.py  test_parser.py  test_rules.py
